--- a/static/stat230/lecture_notes/Day8.html
+++ b/static/stat230/lecture_notes/Day8.html
@@ -61,8 +61,10 @@ class: title-slide, middle
 &lt;br&gt;
 Today: 
 .blockquote-list[
-- Multiple predictors (Planar and Quadratic)
+- Multiple predictors 
+- Quadratic predictors
 - Interactions of predictors
+- Interpretation
 ]
 
 ]
@@ -266,7 +268,7 @@ library(GGally)
 
 # Example: RECS
 
-&gt; Regression of log of energy cost against log of square footage and household size
+.blockquote.font80[Regression of log of energy cost against log of square footage and household size]
 
 &lt;br&gt;
 
@@ -314,12 +316,12 @@ library(GGally)
 &lt;/table&gt;
 
 `$$\hat{\mu}(\log (\text { Cost }) \mid x)=4.3667+0.3722 \log (\text { Sqft })+0.0839 \text { HHSize }$$`
-.blockquote-list.font90[
+.blockquote-list.font80[
 In the original scale of the response
 
 $$
 `\begin{aligned}
-\widehat{\operatorname{med}(\text { Cost } \mid x)} &amp;=e^{4.3667+0.3722 \log (\text { Sqft })+0.0839 H H \text { Size }} \\
+\hat{\operatorname{med}}(\text { Cost } \mid x) &amp;=e^{4.3667+0.3722 \log (\text { Sqft })+0.0839 H H \text { Size }} \\
 &amp;=e^{4.3667} \times(S q f t)^{0.3722} \times e^{0.0839 H H \text { Size }}
 \end{aligned}`
 $$
@@ -385,7 +387,7 @@ ggplot(my_data, aes(x = my_x, y = my_y)) +
 
 count: false
  
-## Example: Corn Yield
+## Example: Corn Yield  (Textbook Ex. 9.15)
 .panel1-model-corn-auto[
 
 ```r
@@ -400,7 +402,7 @@ count: false
 ---
 count: false
  
-## Example: Corn Yield
+## Example: Corn Yield  (Textbook Ex. 9.15)
 .panel1-model-corn-auto[
 
 ```r
@@ -416,7 +418,7 @@ ggplot(ex0915, aes(Rainfall, Yield)) +
 ---
 count: false
  
-## Example: Corn Yield
+## Example: Corn Yield  (Textbook Ex. 9.15)
 .panel1-model-corn-auto[
 
 ```r
@@ -433,7 +435,7 @@ ggplot(ex0915, aes(Rainfall, Yield)) +
 ---
 count: false
  
-## Example: Corn Yield
+## Example: Corn Yield  (Textbook Ex. 9.15)
 .panel1-model-corn-auto[
 
 ```r
@@ -453,7 +455,7 @@ ggplot(ex0915, aes(Rainfall, Yield)) +
 ---
 count: false
  
-## Example: Corn Yield
+## Example: Corn Yield  (Textbook Ex. 9.15)
 .panel1-model-corn-auto[
 
 ```r
@@ -474,7 +476,7 @@ ggplot(ex0915, aes(Rainfall, Yield)) +
 ---
 count: false
  
-## Example: Corn Yield
+## Example: Corn Yield  (Textbook Ex. 9.15)
 .panel1-model-corn-auto[
 
 ```r
@@ -495,7 +497,7 @@ ggplot(ex0915, aes(Rainfall, Yield)) +
 &lt;style&gt;
 .panel1-model-corn-auto {
   color: black;
-  width: 38.6060606060606%;
+  width: 44.5454545454545%;
   hight: 32%;
   float: left;
   padding-left: 1%;
@@ -503,7 +505,7 @@ ggplot(ex0915, aes(Rainfall, Yield)) +
 }
 .panel2-model-corn-auto {
   color: black;
-  width: 59.3939393939394%;
+  width: 53.4545454545454%;
   hight: 32%;
   float: left;
   padding-left: 1%;
@@ -542,7 +544,6 @@ $$
 &amp;=\mu\left(y \mid x_{1}, x_{2}\right)+\beta_{1}+\beta_{2}\left(2 x_{1}+1\right)
 \end{aligned}`
 $$
-
 ]
 
 ---
@@ -618,7 +619,7 @@ class: middle
 
 class: middle
 
-## Example: Corn Yield (Textbook Ex. 9.15)
+## Example: Corn Yield
 
 .blockquote[
 - An increase from 9 to 10 inches of rainfall is associated with a mean yield increase of `\(1.646\)` bushels per acre.
@@ -634,8 +635,7 @@ class: middle
 .blockquote.font90[
 - An interaction `\(x_{1} \times x_{2}\)` is warranted if the effect of `\(x_{1}\)` on `\(y\)` depends on the value of `\(x_{2}\)`and vice versa
 - EDA: we need to look at how `\(x_{1}\)` and `\(y\)` related for cases with the same, or similar, values of `\(x_{2}\)`
-- if this relationship changes, as `\(x_{2}\)` changes, then an interaction term may improve the model
-- Assume all three variables `\(y, x_{1}\)` and `\(x_{2}\)` are quantitative
+- If this relationship changes, as `\(x_{2}\)` changes, then an interaction term may improve the model
 - `ntile` with `\(\mathrm{n}=4\)` divides cases into 4 equal sized groups based on the `\(25^{th}\)`, `\(50^{th}\)`, and `\(75^{th}\)` percentiles of `\(x_2\)`
 ]
 
@@ -891,20 +891,26 @@ class: middle
 
 `$$\hat{\mu}_{\text {Weight } \mid x}=113.93-3.48 \text { Length }-94.63 \text { Width }+5.24 \text { Length } \times \text { Width }$$`
 
-.blockquote.font90[
+.blockquote.font80[
 - Holding length fixed at `\(20 \mathrm{~cm}\)`, a `\(1 \mathrm{~cm}\)` increase in width is associated with an estimated mean increase in weight of
+
 `$$\hat{\beta}_{\text {Width }}+\hat{\beta}_{\text {Width:Length }} 20=-94.63+5.24(20)=10.194 \mathrm{grams}$$`
 - Holding length fixed at `\(40 \mathrm{~cm}\)`, a `\(1 \mathrm{~cm}\)` increase in width is associated with an estimated mean increase in weight of
+
 `$$\hat{\beta}_{\text {Width }}+\hat{\beta}_{\text {Width:Length }} 20=-94.63+5.24(40)=115.02 \text { grams}$$`
+
+
 - The positive interaction parameter estimate means the effect of width on weight is greater for larger values of length
+
+
   - same is true for the effect of length on weight
 ]
 
 ---
 
-## Fitting MLR in R
+### Fitting MLR in R
 
-- Planar 
+- .small[Planar] 
 
 .font80[
 ```r
@@ -912,7 +918,7 @@ lm(y~x1 + x2 + x3, data = )
 ```
 ]
 
-- Quadratic
+- .small[Quadratic]
 
 .font80[
 ```
@@ -920,7 +926,7 @@ lm(y ~ x1 + I(x1^2) + x2, data = )
 ```
 ]
 
-- Interaction 
+- .small[Interaction]
 
 .font80[
 ```
@@ -929,7 +935,7 @@ lm(y ~ x1*x2, data = ) # equals x1 + x2 + x1:x2
 ```
 ]
 
-- Updating an existing model
+- .small[Updating an existing model]
 
 .font80[
 ```
@@ -959,7 +965,7 @@ class: action
 ]
 ]
 
-<div class="countdown" id="timer_625676cd" style="top:0;right:0;padding:3px 4px;font-size:2em;" data-warnwhen="0">
+<div class="countdown" id="timer_6256d7ff" style="top:0;right:0;padding:3px 4px;font-size:2em;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">05</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
