--- a/public/stat230/lecture_notes/Day7.html
+++ b/public/stat230/lecture_notes/Day7.html
@@ -45,7 +45,7 @@ class: title-slide, middle
 
 ### .fancy[Stat 230]
 
- April 11 2022
+ April 13 2022
 
 ---
 
@@ -491,7 +491,7 @@ ggplot(reg_points_cars, aes(x = speed, y = dist)) +
 
 count: false
  
-# Example: ANOVA breakdown for (x,y) = (25,75)
+# Example: ANOVA breakdown for (x,y) = (25,85)
 .panel1-model-fit-auto[
 
 ```r
@@ -506,7 +506,7 @@ count: false
 ---
 count: false
  
-# Example: ANOVA breakdown for (x,y) = (25,75)
+# Example: ANOVA breakdown for (x,y) = (25,85)
 .panel1-model-fit-auto[
 
 ```r
@@ -522,7 +522,7 @@ ggplot(reg_points_cars, aes(x = speed, y = dist)) +
 ---
 count: false
  
-# Example: ANOVA breakdown for (x,y) = (25,75)
+# Example: ANOVA breakdown for (x,y) = (25,85)
 .panel1-model-fit-auto[
 
 ```r
@@ -539,7 +539,7 @@ ggplot(reg_points_cars, aes(x = speed, y = dist)) +
 ---
 count: false
  
-# Example: ANOVA breakdown for (x,y) = (25,75)
+# Example: ANOVA breakdown for (x,y) = (25,85)
 .panel1-model-fit-auto[
 
 ```r
@@ -558,7 +558,7 @@ ggplot(reg_points_cars, aes(x = speed, y = dist)) +
 ---
 count: false
  
-# Example: ANOVA breakdown for (x,y) = (25,75)
+# Example: ANOVA breakdown for (x,y) = (25,85)
 .panel1-model-fit-auto[
 
 ```r
@@ -578,7 +578,7 @@ ggplot(reg_points_cars, aes(x = speed, y = dist)) +
 ---
 count: false
  
-# Example: ANOVA breakdown for (x,y) = (25,75)
+# Example: ANOVA breakdown for (x,y) = (25,85)
 .panel1-model-fit-auto[
 
 ```r
@@ -599,7 +599,7 @@ ggplot(reg_points_cars, aes(x = speed, y = dist)) +
 ---
 count: false
  
-# Example: ANOVA breakdown for (x,y) = (25,75)
+# Example: ANOVA breakdown for (x,y) = (25,85)
 .panel1-model-fit-auto[
 
 ```r
@@ -621,7 +621,7 @@ ggplot(reg_points_cars, aes(x = speed, y = dist)) +
 ---
 count: false
  
-# Example: ANOVA breakdown for (x,y) = (25,75)
+# Example: ANOVA breakdown for (x,y) = (25,85)
 .panel1-model-fit-auto[
 
 ```r
@@ -644,7 +644,7 @@ ggplot(reg_points_cars, aes(x = speed, y = dist)) +
 ---
 count: false
  
-# Example: ANOVA breakdown for (x,y) = (25,75)
+# Example: ANOVA breakdown for (x,y) = (25,85)
 .panel1-model-fit-auto[
 
 ```r
@@ -668,7 +668,7 @@ ggplot(reg_points_cars, aes(x = speed, y = dist)) +
 ---
 count: false
  
-# Example: ANOVA breakdown for (x,y) = (25,75)
+# Example: ANOVA breakdown for (x,y) = (25,85)
 .panel1-model-fit-auto[
 
 ```r
@@ -693,7 +693,7 @@ ggplot(reg_points_cars, aes(x = speed, y = dist)) +
 ---
 count: false
  
-# Example: ANOVA breakdown for (x,y) = (25,75)
+# Example: ANOVA breakdown for (x,y) = (25,85)
 .panel1-model-fit-auto[
 
 ```r
@@ -719,7 +719,7 @@ ggplot(reg_points_cars, aes(x = speed, y = dist)) +
 ---
 count: false
  
-# Example: ANOVA breakdown for (x,y) = (25,75)
+# Example: ANOVA breakdown for (x,y) = (25,85)
 .panel1-model-fit-auto[
 
 ```r
@@ -746,7 +746,7 @@ ggplot(reg_points_cars, aes(x = speed, y = dist)) +
 ---
 count: false
  
-# Example: ANOVA breakdown for (x,y) = (25,75)
+# Example: ANOVA breakdown for (x,y) = (25,85)
 .panel1-model-fit-auto[
 
 ```r
@@ -774,7 +774,7 @@ ggplot(reg_points_cars, aes(x = speed, y = dist)) +
 ---
 count: false
  
-# Example: ANOVA breakdown for (x,y) = (25,75)
+# Example: ANOVA breakdown for (x,y) = (25,85)
 .panel1-model-fit-auto[
 
 ```r
@@ -803,7 +803,7 @@ ggplot(reg_points_cars, aes(x = speed, y = dist)) +
 ---
 count: false
  
-# Example: ANOVA breakdown for (x,y) = (25,75)
+# Example: ANOVA breakdown for (x,y) = (25,85)
 .panel1-model-fit-auto[
 
 ```r
@@ -833,7 +833,7 @@ ggplot(reg_points_cars, aes(x = speed, y = dist)) +
 ---
 count: false
  
-# Example: ANOVA breakdown for (x,y) = (25,75)
+# Example: ANOVA breakdown for (x,y) = (25,85)
 .panel1-model-fit-auto[
 
 ```r
@@ -864,7 +864,7 @@ ggplot(reg_points_cars, aes(x = speed, y = dist)) +
 ---
 count: false
  
-# Example: ANOVA breakdown for (x,y) = (25,75)
+# Example: ANOVA breakdown for (x,y) = (25,85)
 .panel1-model-fit-auto[
 
 ```r
@@ -896,7 +896,7 @@ ggplot(reg_points_cars, aes(x = speed, y = dist)) +
 ---
 count: false
  
-# Example: ANOVA breakdown for (x,y) = (25,75)
+# Example: ANOVA breakdown for (x,y) = (25,85)
 .panel1-model-fit-auto[
 
 ```r
@@ -929,7 +929,7 @@ ggplot(reg_points_cars, aes(x = speed, y = dist)) +
 ---
 count: false
  
-# Example: ANOVA breakdown for (x,y) = (25,75)
+# Example: ANOVA breakdown for (x,y) = (25,85)
 .panel1-model-fit-auto[
 
 ```r
@@ -1039,7 +1039,7 @@ Here is how the summary reported `\(R^{2}\)` of `\(65 \%\)` was calculated:
 .code80[
 
 ```r
-(SSreg &lt;- (50-2)*236.5317)
+(SSR &lt;- (50-2)*236.5317)
 [1] 11353.52
 (SST &lt;- (50-1)*664.0608)
 [1] 32538.98
@@ -1048,7 +1048,7 @@ Here is how the summary reported `\(R^{2}\)` of `\(65 \%\)` was calculated:
 .pull-right[
 
 ```r
-1 - SSreg/SST
+1 - SSR/SST
 [1] 0.6510794
 ```
 
@@ -1591,7 +1591,7 @@ class: action
 ]
 ]
 
-<div class="countdown" id="timer_62543d82" style="top:0;right:0;padding:3px 4px;font-size:2em;" data-warnwhen="0">
+<div class="countdown" id="timer_6256db32" style="top:0;right:0;padding:3px 4px;font-size:2em;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">05</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
