--- a/static/stat230/lecture_notes/Day8.html
+++ b/static/stat230/lecture_notes/Day8.html
@@ -688,12 +688,20 @@ count: false
 ```r
 library(Stat2Data)
 data("Perch")
-*ggplot(Perch, aes(x = Width, y = Weight))
+*glimpse(Perch)
 ```
 ]
  
 .panel2-perch-interaction-auto[
-&lt;img src="Day8_files/figure-html/perch-interaction_auto_03_output-1.svg" width="100%" /&gt;
+
+```
+Rows: 56
+Columns: 4
+$ Obs    &lt;int&gt; 104, 105, 106, 107, 108, 109, 110, 111, 112, 113, 114, 115, 116…
+$ Weight &lt;dbl&gt; 5.9, 32.0, 40.0, 51.5, 70.0, 100.0, 78.0, 80.0, 85.0, 85.0, 110…
+$ Length &lt;dbl&gt; 8.8, 14.7, 16.0, 17.2, 18.5, 19.2, 19.4, 20.2, 20.8, 21.0, 22.5…
+$ Width  &lt;dbl&gt; 1.4, 2.0, 2.4, 2.6, 2.9, 3.3, 3.1, 3.1, 3.0, 2.8, 3.6, 3.3, 3.7…
+```
 ]
 
 ---
@@ -705,12 +713,22 @@ count: false
 ```r
 library(Stat2Data)
 data("Perch")
-ggplot(Perch, aes(x = Width, y = Weight)) +
-*geom_point()
+glimpse(Perch)
+*ggplot(Perch, aes(x = Width, y = Weight))
 ```
 ]
  
 .panel2-perch-interaction-auto[
+
+```
+Rows: 56
+Columns: 4
+$ Obs    &lt;int&gt; 104, 105, 106, 107, 108, 109, 110, 111, 112, 113, 114, 115, 116…
+$ Weight &lt;dbl&gt; 5.9, 32.0, 40.0, 51.5, 70.0, 100.0, 78.0, 80.0, 85.0, 85.0, 110…
+$ Length &lt;dbl&gt; 8.8, 14.7, 16.0, 17.2, 18.5, 19.2, 19.4, 20.2, 20.8, 21.0, 22.5…
+$ Width  &lt;dbl&gt; 1.4, 2.0, 2.4, 2.6, 2.9, 3.3, 3.1, 3.1, 3.0, 2.8, 3.6, 3.3, 3.7…
+```
+
 &lt;img src="Day8_files/figure-html/perch-interaction_auto_04_output-1.svg" width="100%" /&gt;
 ]
 
@@ -723,13 +741,23 @@ count: false
 ```r
 library(Stat2Data)
 data("Perch")
+glimpse(Perch)
 ggplot(Perch, aes(x = Width, y = Weight)) +
- geom_point() +
-*geom_smooth(method = "lm", se = FALSE)
+*geom_point()
 ```
 ]
  
 .panel2-perch-interaction-auto[
+
+```
+Rows: 56
+Columns: 4
+$ Obs    &lt;int&gt; 104, 105, 106, 107, 108, 109, 110, 111, 112, 113, 114, 115, 116…
+$ Weight &lt;dbl&gt; 5.9, 32.0, 40.0, 51.5, 70.0, 100.0, 78.0, 80.0, 85.0, 85.0, 110…
+$ Length &lt;dbl&gt; 8.8, 14.7, 16.0, 17.2, 18.5, 19.2, 19.4, 20.2, 20.8, 21.0, 22.5…
+$ Width  &lt;dbl&gt; 1.4, 2.0, 2.4, 2.6, 2.9, 3.3, 3.1, 3.1, 3.0, 2.8, 3.6, 3.3, 3.7…
+```
+
 &lt;img src="Day8_files/figure-html/perch-interaction_auto_05_output-1.svg" width="100%" /&gt;
 ]
 
@@ -742,6 +770,37 @@ count: false
 ```r
 library(Stat2Data)
 data("Perch")
+glimpse(Perch)
+ggplot(Perch, aes(x = Width, y = Weight)) +
+ geom_point() +
+*geom_smooth(method = "lm", se = FALSE)
+```
+]
+ 
+.panel2-perch-interaction-auto[
+
+```
+Rows: 56
+Columns: 4
+$ Obs    &lt;int&gt; 104, 105, 106, 107, 108, 109, 110, 111, 112, 113, 114, 115, 116…
+$ Weight &lt;dbl&gt; 5.9, 32.0, 40.0, 51.5, 70.0, 100.0, 78.0, 80.0, 85.0, 85.0, 110…
+$ Length &lt;dbl&gt; 8.8, 14.7, 16.0, 17.2, 18.5, 19.2, 19.4, 20.2, 20.8, 21.0, 22.5…
+$ Width  &lt;dbl&gt; 1.4, 2.0, 2.4, 2.6, 2.9, 3.3, 3.1, 3.1, 3.0, 2.8, 3.6, 3.3, 3.7…
+```
+
+&lt;img src="Day8_files/figure-html/perch-interaction_auto_06_output-1.svg" width="100%" /&gt;
+]
+
+---
+count: false
+ 
+## Example: Perch interaction
+.panel1-perch-interaction-auto[
+
+```r
+library(Stat2Data)
+data("Perch")
+glimpse(Perch)
 ggplot(Perch, aes(x = Width, y = Weight)) +
  geom_point() +
  geom_smooth(method = "lm", se = FALSE) +
@@ -750,7 +809,17 @@ ggplot(Perch, aes(x = Width, y = Weight)) +
 ]
  
 .panel2-perch-interaction-auto[
-&lt;img src="Day8_files/figure-html/perch-interaction_auto_06_output-1.svg" width="100%" /&gt;
+
+```
+Rows: 56
+Columns: 4
+$ Obs    &lt;int&gt; 104, 105, 106, 107, 108, 109, 110, 111, 112, 113, 114, 115, 116…
+$ Weight &lt;dbl&gt; 5.9, 32.0, 40.0, 51.5, 70.0, 100.0, 78.0, 80.0, 85.0, 85.0, 110…
+$ Length &lt;dbl&gt; 8.8, 14.7, 16.0, 17.2, 18.5, 19.2, 19.4, 20.2, 20.8, 21.0, 22.5…
+$ Width  &lt;dbl&gt; 1.4, 2.0, 2.4, 2.6, 2.9, 3.3, 3.1, 3.1, 3.0, 2.8, 3.6, 3.3, 3.7…
+```
+
+&lt;img src="Day8_files/figure-html/perch-interaction_auto_07_output-1.svg" width="100%" /&gt;
 ]
 
 &lt;style&gt;
@@ -760,7 +829,7 @@ ggplot(Perch, aes(x = Width, y = Weight)) +
   hight: 32%;
   float: left;
   padding-left: 1%;
-  font-size: 60%
+  font-size: 50%
 }
 .panel2-perch-interaction-auto {
   color: black;
@@ -768,7 +837,7 @@ ggplot(Perch, aes(x = Width, y = Weight)) +
   hight: 32%;
   float: left;
   padding-left: 1%;
-  font-size: 60%
+  font-size: 50%
 }
 .panel3-perch-interaction-auto {
   color: black;
@@ -776,7 +845,7 @@ ggplot(Perch, aes(x = Width, y = Weight)) +
   hight: 33%;
   float: left;
   padding-left: 1%;
-  font-size: 60%
+  font-size: 50%
 }
 &lt;/style&gt;
 
@@ -878,7 +947,7 @@ class: middle
 .blockquote.font80[
 - How does width affect mean weight?
 
-  - well, it depends on the length of the fish in a model with a length and width interaction
+  - it depends on the length of the fish in a model with a length and width interaction
   
 - Holding length fixed, a 1 unit increase in width is associated with an estimated mean change in weight of
 `$$\hat{\beta}_{\text {Width }}+\hat{\beta}_{\text {Width:Length }} \text { Length }=-94.63+5.24 \text { Length }$$`
@@ -965,7 +1034,7 @@ class: action
 ]
 ]
 
-<div class="countdown" id="timer_6256d7ff" style="top:0;right:0;padding:3px 4px;font-size:2em;" data-warnwhen="0">
+<div class="countdown" id="timer_6256e4c2" style="top:0;right:0;padding:3px 4px;font-size:2em;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">05</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
