--- a/public/stat230/lecture_notes/Day9.html
+++ b/public/stat230/lecture_notes/Day9.html
@@ -293,7 +293,7 @@ Work through Problem 1 of the categorical predictors worksheet with a neighbor
 ]
 ]
 
-<div class="countdown" id="timer_62597bd7" style="top:0;right:0;padding:3px 4px;font-size:2em;" data-warnwhen="0">
+<div class="countdown" id="timer_62598ff5" style="top:0;right:0;padding:3px 4px;font-size:2em;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">05</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -773,7 +773,7 @@ class: middle
 # Example: Penguins interaction
 
 - Difference between mean mass between species depends on bill length
-- Holding bill length fixed, `\(\beta_{2}+\beta_{4} \text{bill}\)` is the difference in mean mass between .green[Chinstrap] and .red[Adelie]
+- Holding bill length fixed, `\(\beta_{2}+\beta_{4} bill\)` is the difference in mean mass between .green[Chinstrap] and .red[Adelie]
 
 .blockquote[
 $$
@@ -790,7 +790,7 @@ class: middle
 # Example: Penguins interaction
 
 - Difference between mean mass between species depends on bill length
-- Holding bill length fixed, `\(\beta_{3}+\beta_{5} \text{bill}\)` is the difference in mean mass between .ggplotblue[Gentoo] and .red[Adelie]
+- Holding bill length fixed, `\(\beta_{3}+\beta_{5} bill\)` is the difference in mean mass between .ggplotblue[Gentoo] and .red[Adelie]
 
 .blockquote[
 `\begin{align}
@@ -929,7 +929,7 @@ Work through Problem 2 of the categorical predictors worksheet with a neighbor
 ]
 ]
 
-<div class="countdown" id="timer_62597d7f" style="top:0;right:0;padding:3px 4px;font-size:2em;" data-warnwhen="0">
+<div class="countdown" id="timer_62598e6b" style="top:0;right:0;padding:3px 4px;font-size:2em;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">05</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
