--- a/public/courses/stat120/week1/index.html
+++ b/public/courses/stat120/week1/index.html
@@ -709,6 +709,10 @@ Day 3 Slides (pdf/html)" /><meta property="og:image" content="https://deepbas.ne
       
 
 
+  <li class=""><a href="/courses/stat120/week4/">Week 4</a></li>
+
+
+
   <li class=""><a href="/courses/stat120/week3/">Week 3</a></li>
 
 
