--- a/public/courses/stat230/index.html
+++ b/public/courses/stat230/index.html
@@ -700,6 +700,10 @@
       
 
 
+  <li class=""><a href="/courses/stat230/week4/">Week 4</a></li>
+
+
+
   <li class=""><a href="/courses/stat230/week3/">Week 3</a></li>
 
 
