--- a/public/courses/stat230/week2/index.html
+++ b/public/courses/stat230/week2/index.html
@@ -709,6 +709,10 @@ Day 6 Slides (pdf/html)" /><meta property="og:image" content="https://deepbas.ne
       
 
 
+  <li class=""><a href="/courses/stat230/week6/">Week 6</a></li>
+
+
+
   <li class=""><a href="/courses/stat230/week5/">Week 5</a></li>
 
 
