--- a/static/stat230/lecture_notes/Day16.html
+++ b/static/stat230/lecture_notes/Day16.html
@@ -715,7 +715,7 @@ class: action
 ]
 ]
 
-<div class="countdown" id="timer_6272950e" style="top:0;right:0;padding:3px 4px;font-size:2em;" data-warnwhen="0">
+<div class="countdown" id="timer_62729eb1" style="top:0;right:0;padding:3px 4px;font-size:2em;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">05</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -805,7 +805,7 @@ class: middle
 
 .bold[Classification problem]
 - Are you going to default on your loan? Plug your employment, loan history, personal background in to a model and predict default (yes/no).
-- They didn't care about parameter interpretation!
+- We don't care about parameter interpretation!
 ]
 
 
@@ -816,7 +816,7 @@ class: middle
 # Thoughts on Variable Selection
 
 .blockquote[
-- Modeling goals 1 and 3 often involve determining the most "statistically significant" variables.
+- Modeling goals 1 and 2 often involve determining the most "statistically significant" variables.
 - A model with `\(p\)` terms will have `\(2^{p}\)` possible models!.
 - Usually, when faced with many variables, there is no one best model!
 - But some models are better than others. You need to (correctly) justify the choice of your "best" model.
@@ -859,7 +859,7 @@ class: action
 ]
 ]
 
-<div class="countdown" id="timer_62729756" style="top:0;right:0;padding:3px 4px;font-size:2em;" data-warnwhen="0">
+<div class="countdown" id="timer_62729ecb" style="top:0;right:0;padding:3px 4px;font-size:2em;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">05</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
