--- a/public/courses/stat230/week6/index.html
+++ b/public/courses/stat230/week6/index.html
@@ -61,7 +61,8 @@
     
   
   <meta name="description" content="Midterm Break on Monday 05/02!
-Day 16 Slides (pdf/html)" />
+Day 16 Slides (pdf/html)
+Day 17 Slides (pdf/html)" />
 
   
   <link rel="alternate" hreflang="en-us" href="https://deepbas.netlify.app/courses/stat230/week6/" />
@@ -306,7 +307,8 @@ Day 16 Slides (pdf/html)" />
   <meta property="og:url" content="https://deepbas.netlify.app/courses/stat230/week6/" />
   <meta property="og:title" content="Week 6 | Deepak Bastola" />
   <meta property="og:description" content="Midterm Break on Monday 05/02!
-Day 16 Slides (pdf/html)" /><meta property="og:image" content="https://deepbas.netlify.app/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" />
+Day 16 Slides (pdf/html)
+Day 17 Slides (pdf/html)" /><meta property="og:image" content="https://deepbas.netlify.app/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" />
     <meta property="twitter:image" content="https://deepbas.netlify.app/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" /><meta property="og:locale" content="en-us" />
   
     
@@ -802,6 +804,7 @@ Day 16 Slides (pdf/html)" /><meta property="og:image" content="https://deepbas.n
           <div class="article-style">
             <p>Midterm Break on Monday 05/02!</p>
 <p>Day 16 Slides (<a href="/stat230/lecture_notes/Day16.pdf" target="_blank">pdf</a>/<a href="/stat230/lecture_notes/Day16.html" target="_blank">html</a>)</p>
+<p>Day 17 Slides (<a href="/stat230/lecture_notes/Day17.pdf" target="_blank">pdf</a>/<a href="/stat230/lecture_notes/Day17.html" target="_blank">html</a>)</p>
 
           </div>
 
