--- a/static/stat230/lecture_notes/Day17.html
+++ b/static/stat230/lecture_notes/Day17.html
@@ -17,8 +17,6 @@
     <script>window.xaringanExtraClipboard(null, {"button":"<i class=\"fa fa-clipboard\"><\/i>","success":"<i class=\"fa fa-check\" style=\"color: #90BE6D\"><\/i>","error":"<i class=\"fa fa-times-circle\" style=\"color: #F94144\"><\/i>"})</script>
     <link href="libs/font-awesome/css/all.css" rel="stylesheet" />
     <link href="libs/font-awesome/css/v4-shims.css" rel="stylesheet" />
-    <link href="libs/countdown/countdown.css" rel="stylesheet" />
-    <script src="libs/countdown/countdown.js"></script>
     <script src="https://use.fontawesome.com/5235085b15.js"></script>
 
     <link rel="stylesheet" href="css/xaringan-themer-solns.css" type="text/css" />
@@ -45,7 +43,7 @@ class: title-slide, middle
 
 ### .fancy[Stat 230]
 
- May 06 2022
+ May 08 2022
 
 ---
 
@@ -63,9 +61,11 @@ Today:
 &lt;br&gt;
 &lt;br&gt;
 .blockquote-list[
-- Violation of independence
-- Serial correlation
-- Partial autocorrelation 
+- Binary responses and Bernoulli distribution
+- logistic and logit functions
+- odds, log odds and odds ratio
+- logistic regression model
+- interpretation
 ]
 
 ]
@@ -74,465 +74,7 @@ Today:
 
 ---
 
-# Measuring Global Warming
 
-.pull-left[
-.scroll-box-20[
-
-```
-    Year Temperature
-1   1850      -0.371
-2   1851      -0.222
-3   1852      -0.178
-4   1853      -0.224
-5   1854      -0.113
-6   1855      -0.238
-7   1856      -0.403
-8   1857      -0.399
-9   1858      -0.420
-10  1859      -0.273
-11  1860      -0.370
-12  1861      -0.299
-13  1862      -0.606
-14  1863      -0.217
-15  1864      -0.492
-16  1865      -0.233
-17  1866      -0.245
-18  1867      -0.290
-19  1868      -0.148
-20  1869      -0.160
-21  1870      -0.185
-22  1871      -0.343
-23  1872      -0.229
-24  1873      -0.323
-25  1874      -0.292
-26  1875      -0.490
-27  1876      -0.335
-28  1877      -0.053
-29  1878       0.130
-30  1879      -0.241
-31  1880      -0.255
-32  1881      -0.300
-33  1882      -0.281
-34  1883      -0.375
-35  1884      -0.445
-36  1885      -0.412
-37  1886      -0.299
-38  1887      -0.297
-39  1888      -0.292
-40  1889      -0.185
-41  1890      -0.372
-42  1891      -0.345
-43  1892      -0.478
-44  1893      -0.543
-45  1894      -0.390
-46  1895      -0.416
-47  1896      -0.203
-48  1897      -0.213
-49  1898      -0.295
-50  1899      -0.252
-51  1900      -0.141
-52  1901      -0.203
-53  1902      -0.395
-54  1903      -0.422
-55  1904      -0.513
-56  1905      -0.390
-57  1906      -0.284
-58  1907      -0.530
-59  1908      -0.499
-60  1909      -0.499
-61  1910      -0.481
-62  1911      -0.470
-63  1912      -0.529
-64  1913      -0.512
-65  1914      -0.312
-66  1915      -0.230
-67  1916      -0.440
-68  1917      -0.523
-69  1918      -0.415
-70  1919      -0.423
-71  1920      -0.352
-72  1921      -0.203
-73  1922      -0.333
-74  1923      -0.301
-75  1924      -0.282
-76  1925      -0.174
-77  1926      -0.087
-78  1927      -0.163
-79  1928      -0.178
-80  1929      -0.322
-81  1930      -0.043
-82  1931      -0.013
-83  1932      -0.056
-84  1933      -0.223
-85  1934      -0.058
-86  1935      -0.088
-87  1936      -0.034
-88  1937       0.085
-89  1938       0.143
-90  1939       0.113
-91  1940       0.006
-92  1941       0.068
-93  1942       0.005
-94  1943       0.068
-95  1944       0.147
-96  1945      -0.032
-97  1946      -0.042
-98  1947      -0.108
-99  1948      -0.057
-100 1949      -0.101
-101 1950      -0.239
-102 1951      -0.041
-103 1952      -0.023
-104 1953       0.098
-105 1954      -0.132
-106 1955      -0.129
-107 1956      -0.295
-108 1957      -0.034
-109 1958       0.083
-110 1959      -0.009
-111 1960      -0.035
-112 1961       0.039
-113 1962       0.080
-114 1963       0.118
-115 1964      -0.208
-116 1965      -0.184
-117 1966      -0.055
-118 1967      -0.028
-119 1968      -0.086
-120 1969      -0.072
-121 1970      -0.072
-122 1971      -0.189
-123 1972      -0.207
-124 1973       0.026
-125 1974      -0.244
-126 1975      -0.136
-127 1976      -0.285
-128 1977       0.003
-129 1978      -0.049
-130 1979       0.026
-131 1980       0.059
-132 1981       0.197
-133 1982      -0.011
-134 1983       0.157
-135 1984      -0.086
-136 1985      -0.134
-137 1986       0.015
-138 1987       0.155
-139 1988       0.202
-140 1989       0.146
-141 1990       0.339
-142 1991       0.240
-143 1992       0.053
-144 1993       0.085
-145 1994       0.232
-146 1995       0.385
-147 1996       0.129
-148 1997       0.410
-149 1998       0.597
-150 1999       0.387
-151 2000       0.364
-152 2001       0.483
-153 2002       0.534
-154 2003       0.561
-155 2004       0.588
-156 2005       0.620
-157 2006       0.563
-158 2007       0.577
-159 2008       0.481
-160 2009       0.517
-161 2010       0.607
-```
-]
-]
-.pull-right[
-&lt;br&gt;
-.blockquote[
-- .bold[Year:] year in which yearly average temperature was computed, from 1850 to 2010
-- .bold[Temperature:] northern hemisphere temperature minus the 161-year average (degrees Celsius)
-
-]
-]
-
----
-
-# Exploratory Data Analysis (EDA)
-
-&lt;img src="Day17_files/figure-html/unnamed-chunk-3-1.svg" width="65%" style="display: block; margin: auto;" /&gt;
-
-
----
-
-# Exploratory Data Analysis (EDA)
-
-&lt;img src="Day17_files/figure-html/unnamed-chunk-4-1.svg" width="65%" style="display: block; margin: auto;" /&gt;
-
-
----
-
-# Moving away from the independence assumption
-
-.blockquote-list.font80[
-
-- Up until now, we assumed responses are approximately normal and independent of one another
-
-- The assumption of independence is rarely (if ever) quite right, but it is often a reasonable approximation
-
-- We see presence of cluster effects and serial effects in many real life scenarios
-]
-
-&lt;br&gt;
-
---
-
-.blockquote.font90[
-.bold[Examples:] 
-
-- a single unit of observation (person, organization, nation, etc.) is tracked over many time periods or points of time
-- time periods that are close to one another are more likely to be similar than time periods that are relatively remote, e.g. stock prices, covid case counts
-]
-
----
-
-class: middle
-
-# Time series with serial correlation
-
-.blockquote.font90[
-- Observed values will go on extended excursions away from the long-run mean
-
-- Residuals exhibits .bold[runs] i.e., consistently positive or negative for long periods
-
-- Sample averages at different time segments do not estimate the correct or long-run mean
-]
-
----
-
-# Standard Error of an Average in Time Series
-
-.blockquote[
-`$$SE(\bar{Y})=\sqrt{\frac{1+r_{1}}{1-r_{1}}} \frac{s}{\sqrt{n}}$$`]
-
-&lt;br&gt;
-
-.blockquote-list[
-- sample variability will no longer be `\(s/\sqrt{n}\)` (i.e., the sample standard error assuming the data is independent)
-- `\(r_1\)` is called the sample *first serial correlation coefficient*
-]
-
----
-
-# First-order autoregressive model
-
-.blockquote-list[
-The series, `\(\left\{Y_{t}\right\}\)`, is measured at equally spaced points in time
-
-The deviation of an observation at time `\(t\)` from the long-run series mean `\(v\)` is `\(\left(Y_{t}-v\right)\)` 
-]
-
---
-
-&lt;br&gt;
-
-.blockquote[
-`\(\mu \{\left(Y_{t}-v\right) \mid \text{past history}\}\)`, the mean of the `\(t^{th}\)` deviation as a function of all previous deviations depends on lag 1 deviation
- 
-`$$\mu\left\{\left(Y_{t}-v\right) \mid \text { past history }\right\}=\alpha\left(Y_{t-1}-v\right)$$`
-- `\(\alpha\)` is called the autoregression coefficient
-]
-
-
----
-
-
-## The first serial correlation coefficient, `\(r_1\)`
-
-.blockquote.font80[
-`\(r_1\)` provides a numerical summary measure of the correlation between adjacent residuals
-- `\(r_{1}\)` is similar to the estimated slope in a regression of `\(Y_{t}\)` on `\(Y_{t-1}\)`
-]
-
-&lt;br&gt;
-
-.blockquote-list.font80[
-`$$r_{1}=\frac{c_{1}}{c_{0}}$$`
-
-`$$\begin{array}{l}
-c_{1}=\frac{1}{n-1} \sum_{t=2}^{n} \text { res }_{t} \times \text { res }_{t-1} \qquad \text{ and } \qquad
-c_{0}=\frac{1}{n-1} \sum_{t=1}^{n} \text { res }_{t}^{2},
-\end{array}$$`
-]
-
-
-&lt;br&gt;
-
-.blockquote.font80[
-- `\(c_0\)` is just the sample variance of the residuals
-- `\(c_1\)` is just the sample covariance of the residuals that are 1 lag apart
-]
-
----
-
-
-## Temperature example: a lag plot
-
-&lt;img src="Day17_files/figure-html/unnamed-chunk-5-1.svg" width="65%" style="display: block; margin: auto;" /&gt;
-
----
-
-
-# Temperature example: linear fit with a quadratic term
-
-
-
-
-
-```r
-gwarming_m1 &lt;- lm(Temperature ~ Year + yearSquared, data = case1502) 
-summary(gwarming_m1) 
-
-Call:
-lm(formula = Temperature ~ Year + yearSquared, data = case1502)
-
-Residuals:
-     Min       1Q   Median       3Q      Max 
--0.37663 -0.10532  0.01289  0.10494  0.45210 
-
-Coefficients:
-            Estimate Std. Error t value Pr(&gt;|t|)    
-(Intercept) -0.32095    0.01607 -19.966  &lt; 2e-16 ***
-Year         0.12594    0.04475   2.814  0.00551 ** 
-yearSquared  0.54860    0.06131   8.948 9.29e-16 ***
----
-Signif. codes:  0 '***' 0.001 '**' 0.01 '*' 0.05 '.' 0.1 ' ' 1
-
-Residual standard error: 0.1503 on 158 degrees of freedom
-Multiple R-squared:  0.7163,	Adjusted R-squared:  0.7127 
-F-statistic: 199.5 on 2 and 158 DF,  p-value: &lt; 2.2e-16
-```
-
-
----
-
-# Temperature example: residual plot
-
-&lt;img src="Day17_files/figure-html/unnamed-chunk-8-1.svg" width="65%" style="display: block; margin: auto;" /&gt;
-
----
-
-# Remedy: regression with filtered variables (AR(1) model)
-
-&gt; Serial correlation can be handled by a special transformation called *filtering*
-
-`$$V_{t}=Y_{t}-\alpha Y_{t-1}, \quad \text { and } \quad U_{t}=X_{t}-\alpha X_{t-1}$$`
-.blockquote[
-The model reduces to the following with no more correlated errors and same slope
-`$$\mu\left\{V_{t} \mid U_{t}\right\}=\gamma_{0}+\beta_{1} U_{t}$$`
-- The intercept changes to `\(\gamma_0 = (1-\alpha)\beta_0\)`.
-]
-&lt;br&gt;
-.blockquote-list[Use same modeling concepts on the filtered response and explanatory variables
-to estimate the regression coefficients (Also applies to MLR!)
-]
-
----
-
-class: middle
-
-# Remedy: regression with filtered variables (AR(1) model)
-
-.blockquote[
-.bold[Problem:] one must know `\(\alpha\)` to construct the filtered variables V and U
-
-.bold[Solution:] Use `\(r_1\)` can be used as an estimate of `\(\alpha\)`
-
-`$$V_{t}=Y_{t}-r_{1} Y_{t-1} \quad \text { and } \quad U_{t}=X_{t}- r_{1} X_{t-1}$$`
-]
-
----
-
-# Partial autocorrelation
-
-.blockquote[
-Partial autocorrelation measures the association between residuals spaced a certain number of lags apart in time, after accounting for the effects of the residuals between them. 
-]
-
-
-```r
-residual &lt;- gwarming_m1$residuals
-gwarming_Pacf &lt;- pacf(residual, plot = FALSE)  # partial autocorrelation from residuals
-```
-
-
-
-```r
-r1 &lt;- gwarming_Pacf$acf[1]  # First serial correlation coefficient  
-r1
-[1] 0.5916607
-```
-
-
----
-
-# Partial autocorrelation functions
-
-&lt;img src="Day17_files/figure-html/unnamed-chunk-11-1.svg" width="65%" style="display: block; margin: auto;" /&gt;
-
-
----
-
-# Refit the model on filtered variables
-
-
-
-
-
-&lt;img src="Day17_files/figure-html/unnamed-chunk-13-1.svg" width="65%" style="display: block; margin: auto;" /&gt;
-
-
----
-
-# Residual plot after filtering
-
-&lt;img src="Day17_files/figure-html/unnamed-chunk-14-1.svg" width="65%" style="display: block; margin: auto;" /&gt;
-
----
-
-class: middle
-
-# Procedure for filtering with more than one predictor
-
-.blockquote[
-1. Fit the ordinary regression of the response on the explanatory variables and obtain residuals.
-2. Calculate the autocovariance estimates `\(c_{0}\)` and `\(c_{1}\)` from the residuals. From these calculate the first serial correlation coefficient `\(r_{1}=c_{1} / c_{0}\)`.
-3. Compute the filtered versions of the response and explanatory variables.
-4. Fit the regression of the filtered response on the filtered explanatory variables, and use the usual tools to make inferences about the coefficients (but not the intercept). The intercept for the model of interest, if desired, is estimated by the reported intercept estimate divided by `\(\left(1-r_{1}\right)\)`.
-]
-
----
-
-class: action
-
-# &lt;i class="fa fa-pencil-square-o" style="font-size:48px;color:purple"&gt;&amp;nbsp;Your&amp;nbsp;Turn&amp;nbsp;1&lt;/i&gt;    
-
-
-.pull-left-40[
-![](https://media.giphy.com/media/RKApDdwsQ6jkwd6RNn/giphy.gif)
-]
-.pull-right-60[
-
-&lt;br&gt;
-&lt;br&gt;
-
-.blockquote[
-- Go over to the in class activity file
-- Complete the activity in your group
-]
-]
-
-<div class="countdown" id="timer_62753aca" style="top:0;right:0;padding:3px 4px;font-size:2em;" data-warnwhen="0">
-<code class="countdown-time"><span class="countdown-digits minutes">05</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
-</div>
 
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
