--- a/public/courses/stat120/week6/index.html
+++ b/public/courses/stat120/week6/index.html
@@ -61,8 +61,8 @@
     
   
   <meta name="description" content="Midterm Break!
-Day 16 Slides ()
-Day 17 Slides ()" />
+Day 16 Slides (pdf)
+Day 17 Slides (pdf)" />
 
   
   <link rel="alternate" hreflang="en-us" href="https://deepbas.netlify.app/courses/stat120/week6/" />
@@ -307,8 +307,8 @@ Day 17 Slides ()" />
   <meta property="og:url" content="https://deepbas.netlify.app/courses/stat120/week6/" />
   <meta property="og:title" content="Week 6 | Deepak Bastola" />
   <meta property="og:description" content="Midterm Break!
-Day 16 Slides ()
-Day 17 Slides ()" /><meta property="og:image" content="https://deepbas.netlify.app/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" />
+Day 16 Slides (pdf)
+Day 17 Slides (pdf)" /><meta property="og:image" content="https://deepbas.netlify.app/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" />
     <meta property="twitter:image" content="https://deepbas.netlify.app/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" /><meta property="og:locale" content="en-us" />
   
     
@@ -807,9 +807,8 @@ Day 17 Slides ()" /><meta property="og:image" content="https://deepbas.netlify.a
 
           <div class="article-style">
             <p>Midterm Break!</p>
-<p>Day 16 Slides (<a href="/stat120/lecture_notes/Day16.pdf" target="_blank">)</p>
-<p>Day 17 Slides (<a href="/stat120/lecture_notes/Day17.pdf" target="_blank"><p>)</p>
-</a></a></p>
+<p>Day 16 Slides (<a href="/stat120/lecture_notes/Day16.pdf" target="_blank">pdf</a>)</p>
+<p>Day 17 Slides (<a href="/stat120/lecture_notes/Day17.pdf" target="_blank">pdf</a>)</p>
 
           </div>
 
