--- a/public/courses/stat120/week4/index.html
+++ b/public/courses/stat120/week4/index.html
@@ -62,7 +62,7 @@
   
   <meta name="description" content="Day 10 Slides (pdf/html)
 Midterm I
-Day 12 Slides ()" />
+Day 12 Slides (pdf)" />
 
   
   <link rel="alternate" hreflang="en-us" href="https://deepbas.netlify.app/courses/stat120/week4/" />
@@ -308,7 +308,7 @@ Day 12 Slides ()" />
   <meta property="og:title" content="Week 4 | Deepak Bastola" />
   <meta property="og:description" content="Day 10 Slides (pdf/html)
 Midterm I
-Day 12 Slides ()" /><meta property="og:image" content="https://deepbas.netlify.app/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" />
+Day 12 Slides (pdf)" /><meta property="og:image" content="https://deepbas.netlify.app/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" />
     <meta property="twitter:image" content="https://deepbas.netlify.app/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" /><meta property="og:locale" content="en-us" />
   
     
@@ -808,7 +808,7 @@ Day 12 Slides ()" /><meta property="og:image" content="https://deepbas.netlify.a
           <div class="article-style">
             <p>Day 10 Slides (<a href="/stat120/lecture_notes/Day10.pdf" target="_blank">pdf</a>/<a href="/stat120/lecture_notes/Day10.html" target="_blank">html</a>)</p>
 <p>Midterm I</p>
-<p>Day 12 Slides (<a href="/stat120/lecture_notes/Day12.pdf" target="_blank">)</a></p>
+<p>Day 12 Slides (<a href="/stat120/lecture_notes/Day12.pdf" target="_blank">pdf</a>)</p>
 
           </div>
 
