--- a/public/courses/stat120/week7/index.html
+++ b/public/courses/stat120/week7/index.html
@@ -60,7 +60,7 @@
   
     
   
-  <meta name="description" content="Day 18 Slides ()" />
+  <meta name="description" content="Day 18 Slides (pdf)" />
 
   
   <link rel="alternate" hreflang="en-us" href="https://deepbas.netlify.app/courses/stat120/week7/" />
@@ -304,7 +304,7 @@
   <meta property="og:site_name" content="Deepak Bastola" />
   <meta property="og:url" content="https://deepbas.netlify.app/courses/stat120/week7/" />
   <meta property="og:title" content="Week 7 | Deepak Bastola" />
-  <meta property="og:description" content="Day 18 Slides ()" /><meta property="og:image" content="https://deepbas.netlify.app/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" />
+  <meta property="og:description" content="Day 18 Slides (pdf)" /><meta property="og:image" content="https://deepbas.netlify.app/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" />
     <meta property="twitter:image" content="https://deepbas.netlify.app/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" /><meta property="og:locale" content="en-us" />
   
     
@@ -802,7 +802,7 @@
           <h1>Week 7</h1>
 
           <div class="article-style">
-            <p>Day 18 Slides (<a href="/stat230/lecture_notes/Day18.pdf" target="_blank">)</a></p>
+            <p>Day 18 Slides (<a href="/stat230/lecture_notes/Day18.pdf" target="_blank">pdf</a>)</p>
 
           </div>
 
