--- a/public/courses/stat120/week6/index.html
+++ b/public/courses/stat120/week6/index.html
@@ -709,6 +709,10 @@ Day 17 Slides (pdf)" /><meta property="og:image" content="https://deepbas.netlif
       
 
 
+  <li class=""><a href="/courses/stat120/week8/">Week 8</a></li>
+
+
+
   <li class=""><a href="/courses/stat120/week7/">Week 7</a></li>
 
 
