--- a/public/courses/stat230/index.html
+++ b/public/courses/stat230/index.html
@@ -700,6 +700,14 @@
       
 
 
+  <li class=""><a href="/courses/stat230/week10/">Week 10</a></li>
+
+
+
+  <li class=""><a href="/courses/stat230/week9/">Week 9</a></li>
+
+
+
   <li class=""><a href="/courses/stat230/week8/">Week 8</a></li>
 
 
