--- a/public/stat230/lecture_notes/Day23.html
+++ b/public/stat230/lecture_notes/Day23.html
@@ -43,7 +43,7 @@ class: title-slide, middle
 
 ### .fancy[Stat 230]
 
- May 20 2022
+ May 22 2022
 
 ---
 
@@ -469,7 +469,7 @@ class: middle
 
 .blockquote[
 .bold[Probability:]
-- This assumption implies that the probability `\(\pi\left(\right.\)`area$\left._{i}\right)$ of extinction on island `\(i\)` is the same for all at risk species on island `\(i\)`.
+- This assumption implies that the probability `\(\pi\left(area_{i}\right)\)` of extinction on island `\(i\)` is the same for all at risk species on island `\(i\)`.
 - This could be violated if, for example, species living primarily on the interior of the island had a lower chance of extinction than species living on the coastal region.
 ]
 
