--- a/content/courses/stat220/PAT.html
+++ b/content/courses/stat220/PAT.html
@@ -1,11 +1,9 @@
 ---
 title: "Cache credentials for RStudio and GitHub"
-description: |
-  This is a brief overview of how to store your GitHub PAT so that
-  you can more easily work with GitHub via RStudio. 
+description: "This is a brief overview of how to store your GitHub PAT so that\nyou
+  can more easily work with GitHub via RStudio. \n"
 ---
 
-<script src="/rmarkdown-libs/header-attrs/header-attrs.js"></script>
 
 
 <p>After you have signed up for a GitHub account and gone through all of the account verification steps, you will need to generate a personal access token (PAT) and let R know what that is. To do this, I suggest following these steps:</p>
