--- a/public/courses/stat220/index.html
+++ b/public/courses/stat220/index.html
@@ -874,7 +874,7 @@
 <li>Midterm Exams (55%)</li>
 <li>Final Project (15%)</li>
 </ol>
-<p>[//] <a href="/pdf/STAT_220_Syllabus.pdf" target="_blank">VIEW THE SYLLABUS</a></p>
+<!-- <a href="/pdf/STAT_220_Syllabus.pdf" target="_blank">VIEW THE SYLLABUS</a> -->
 <h2 id="meet-your-instructor">Meet your instructor</h2>
 <a href="/author/deepak-bastola/">Deepak Bastola</a>
 
