--- a/public/courses/stat220/week1/index.html
+++ b/public/courses/stat220/week1/index.html
@@ -61,7 +61,7 @@
     
   
   <meta name="description" content="Monday, 09/12 Welcome!
-[//] Day 1 Slides" />
+Day 1 Slides -- " />
 
   
   <link rel="alternate" hreflang="en-us" href="https://deepbas.netlify.app/courses/stat220/week1/" />
@@ -306,7 +306,7 @@
   <meta property="og:url" content="https://deepbas.netlify.app/courses/stat220/week1/" />
   <meta property="og:title" content="Week 1 | Deepak Bastola" />
   <meta property="og:description" content="Monday, 09/12 Welcome!
-[//] Day 1 Slides" /><meta property="og:image" content="https://deepbas.netlify.app/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" />
+Day 1 Slides -- " /><meta property="og:image" content="https://deepbas.netlify.app/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" />
     <meta property="twitter:image" content="https://deepbas.netlify.app/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" /><meta property="og:locale" content="en-us" />
   
     
@@ -806,7 +806,7 @@
           <div class="article-style">
             <h2 id="monday-0912">Monday, 09/12</h2>
 <p>Welcome!</p>
-<p>[//] <a href="/pdf/Day1/Day1.pdf" target="_blank">Day 1 Slides</a></p>
+<!-- <a href="/pdf/Day1/Day1.pdf" target="_blank">Day 1 Slides</a> -->
 
           </div>
 
