--- a/public/courses/stat220/assignments/index.html
+++ b/public/courses/stat220/assignments/index.html
@@ -60,10 +60,10 @@
   
     
   
-  <meta name="description" content="Do’s and Don’t of collaboration for individual assignments  You can discuss homework problems with classmates but you must write up your own homework solutions and do your own work in R (no sharing commands or output)." />
+  <meta name="description" content="Do’s and Don’t of collaboration for individual assignments   You can discuss homework problems with classmates but you must write up your own homework solutions and do your own work in R (no sharing commands or output)." />
 
   
-  <link rel="alternate" hreflang="en-us" href="https://deepbas.netlify.app/courses/stat220/homework-in-stat-220/" />
+  <link rel="alternate" hreflang="en-us" href="https://deepbas.netlify.app/courses/stat220/assignments/" />
 
   
   
@@ -279,7 +279,7 @@
   <link rel="icon" type="image/png" href="/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_32x32_fill_lanczos_center_3.png" />
   <link rel="apple-touch-icon" type="image/png" href="/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_180x180_fill_lanczos_center_3.png" />
 
-  <link rel="canonical" href="https://deepbas.netlify.app/courses/stat220/homework-in-stat-220/" />
+  <link rel="canonical" href="https://deepbas.netlify.app/courses/stat220/assignments/" />
 
   
   
@@ -302,9 +302,9 @@
   <meta property="twitter:card" content="summary" />
   
   <meta property="og:site_name" content="Deepak Bastola" />
-  <meta property="og:url" content="https://deepbas.netlify.app/courses/stat220/homework-in-stat-220/" />
+  <meta property="og:url" content="https://deepbas.netlify.app/courses/stat220/assignments/" />
   <meta property="og:title" content="Assignments in Stat 220 | Deepak Bastola" />
-  <meta property="og:description" content="Do’s and Don’t of collaboration for individual assignments  You can discuss homework problems with classmates but you must write up your own homework solutions and do your own work in R (no sharing commands or output)." /><meta property="og:image" content="https://deepbas.netlify.app/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" />
+  <meta property="og:description" content="Do’s and Don’t of collaboration for individual assignments   You can discuss homework problems with classmates but you must write up your own homework solutions and do your own work in R (no sharing commands or output)." /><meta property="og:image" content="https://deepbas.netlify.app/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" />
     <meta property="twitter:image" content="https://deepbas.netlify.app/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" /><meta property="og:locale" content="en-us" />
   
     
@@ -334,7 +334,7 @@
 </head>
 
 
-<body id="top" data-spy="scroll" data-offset="70" data-target="#TableOfContents" class="page-wrapper   " data-wc-page-id="4513a40e7e6396766663a099b861976b" >
+<body id="top" data-spy="scroll" data-offset="70" data-target="#TableOfContents" class="page-wrapper   " data-wc-page-id="0e7ce42eb98bc04b698eb3e859e2a6ad" >
 
   
   
@@ -712,7 +712,7 @@
 
 
 
-  <li class="active"><a href="/courses/stat220/homework-in-stat-220/">Assignments in Stat 220</a></li>
+  <li class="active"><a href="/courses/stat220/assignments/">Assignments in Stat 220</a></li>
 
 
 
@@ -809,90 +809,25 @@
           <h1>Assignments in Stat 220</h1>
 
           <div class="article-style">
-            <h2 id="dos-and-dont-of-collaboration-for-individual-assignments">Do’s and Don’t of collaboration for individual assignments</h2>
+            <h1 id="dos-and-dont-of-collaboration-for-individual-assignments">Do’s and Don’t of collaboration for individual assignments</h1>
 <ul>
-<li>You <em>can</em> discuss homework problems with classmates but you must
-write up <strong>your own</strong> homework solutions and <strong>do your own work in R
-(no sharing commands or output)</strong>.
+<li>
+<p>You can discuss homework problems with classmates but you must write up your own homework solutions and do your own work in R (no sharing commands or output).</p>
 <ul>
-<li><strong>Do not share R commands/code in any way</strong>, including, but not
-limited to, sending commands via email, slack, text, or showing
-commands in a shared screen with the intention of showing a
-classmate your solution to a problem.</li>
-<li>You <strong>can</strong> share a screen to help troubleshoot a coding problem
-in R.</li>
+<li>Do not share R commands/code in any way, including, but not limited to, sending commands via email, slack, text, or showing commands in a shared screen with the intention of showing a classmate your solution to a problem.</li>
+<li>You can share a screen to help troubleshoot a coding problem in R.</li>
 </ul>
 </li>
-<li>You <em>can</em> use the following resources to complete your homework:
-<ul>
-<li>Carleton faculty (myself, other math fac, etc)</li>
-<li>discussions with classmates (see above) or knowledgeable friends</li>
-<li>Carleton resources like stats lab assistants</li>
-<li>student solutions provided in the back of your student textbook
-or in the student solution manual.</li>
-</ul>
+<li>
+<p>You can use the following resources to complete your homework:</p>
 </li>
-<li>You <em>cannot</em> use any resources other than the ones listed above to
-complete assignments (homework, reports, etc) for this class.
-(e.g. you cannot use a friend’s old assignments or reports, answers
-found on the internet, textbook (instructor) solutions manual, etc.)</li>
 </ul>
-<h3 id="examples-that-violate-the-academic-integrity-policy">Examples that violate the academic integrity policy</h3>
-<ul>
-<li>sending your .Rmd homework file to another person in the class</li>
-<li>receiving an .Rmd homework file from another person</li>
-<li>sharing a screen and copying code, verbatim, from another person</li>
-<li>sending/receiving R commands</li>
-<li>neglecting to acknowledge classmates with whom you worked with on an
-assignment</li>
-</ul>
-<h2 id="format-and-content">Format and Content</h2>
-<p>Submit via GitHub (for most assignments) an organized and correctly
-ordered assignment.</p>
-<ul>
-<li>Content: Good data scientists need to do more than just write code;
-they should be able to interpret and explain their analyzes.
-<ul>
-<li>Provide a <strong>written answer</strong> first, followed by any required R
-code and output.</li>
-<li>Use <strong>complete sentences</strong> when answering any problem that
-requires an explanation or overall problem summary.</li>
-</ul>
-</li>
-<li>When including code:
-<ul>
-<li>Be sure to show the natural sequence of work needed to answer
-the problem.</li>
-<li>Include brief comments explain your code steps.</li>
-<li>Do not include typos or unnecessary commands/output.</li>
-<li>Always include code output.</li>
-</ul>
-</li>
-<li>At the top of each individual assignment <strong>include the names of
-classmates that you worked with</strong> on all or part of the assignment
-(but each person must write up their assignment on their own)</li>
-</ul>
-<hr>
-<p><strong>Disability Accommodations:</strong> Carleton College is committed to
-providing equitable access to learning opportunities for all students.
-The Disability Services office (Henry House, 107 Union Street) is the
-campus office that collaborates with students who have disabilities to
-provide and/or arrange reasonable accommodations. If you have, or think
-you may have, a disability (e.g., mental health, attentional, learning,
-autism spectrum disorders, chronic health, traumatic brain injury and
-concussions, vision, hearing, mobility, or speech impairments), please
-contact <a href="mailto:disability@carleton.edu">disability@carleton.edu</a> or call Sam Thayer (’10),
-Accessibility Specialist (x4464) or Chris Dallager, Director of
-Disability Services (x5250) to arrange a confidential discussion
-regarding equitable access and reasonable accommodations.</p>
-<p><strong>Academic Honesty:</strong> All work that you turn in under your name must
-follow Carleton’s academic integrity policy. The use of textbook
-solution manuals (physical or online solutions), homework, reports or
-exams done by past students are not allowed. Look at the College’s
-<a href="https://www.carleton.edu/writing/plagiarism/" target="_blank" rel="noopener">Writing Across the
-Curriculum</a> website for
-additional guidance on plagiarism and how to avoid plagiarism in their
-writing.</p>
+<blockquote>
+<p>Carleton faculty (myself, other math/stats fac, etc)
+discussions with classmates (see above) or knowledgeable friends
+Carleton resources like stats lab assistants
+student solutions provided in the back of your student textbook or in the student solution manual.</p>
+</blockquote>
 
           </div>
 
