--- a/public/courses/stat220/rstudio-in-stat-220/index.html
+++ b/public/courses/stat220/rstudio-in-stat-220/index.html
@@ -714,6 +714,10 @@ There will be a lot of Rstudio content thrown your way this term, most in the fo
 
 
 
+  <li class=""><a href="/courses/stat220/homework-in-stat-220/">Assignments in Stat 220</a></li>
+
+
+
   <li class=""><a href="/courses/stat220/github-in-stat-220/">GitHub Classroom Guide for Students in Stat 220</a></li>
 
 
